--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/logo.webp" />
+    <link rel="icon" type="image/webp" href="/logoo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MySnapKeep - Snap it. Lock it. Drop it.</title>
   </head>
