feat: add Google verification meta tag

--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/logoo.webp" />
+    <meta name="google-site-verification" content="VKByQkb_qQpQ6mqW16P8MwLnY8rmG3g_UvPk8uaoqLY" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/webp" href="/logoo.webp" />
     <title>MySnapKeep - Snap it. Lock it. Drop it.</title>
   </head>
   <body>
